# aImageScale

./: CMakeLists.txt  README.md  aMyScale.cxx  aMyScale.h  aMyScaleFactory.cxx  aMyScaleFactory.h  aMyScaleMax.cxx  aMyScaleMax.h  aMyScaleNN.cxx  aMyScaleNN.h
Demo/: main.cpp  run_test.sh
